--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://f874cc22-69ba-48b8-8a48-c9cc4b777336.preview.emergentagent.com
 WDS_SOCKET_PORT=443
